@@ -349,6 +349,8 @@ static const CRPCCommand vRPCCommands[] =
     { "help",                                           &help,                                          true,      true,      false },
     { "stop",                                           &stop,                                          true,      true,      false },
     { "debug",                                          &debug,                                         true,      true,      false },
+    { "prune",                                          &prune,                                         true,      true,      false },
+    { "reorganize",                                     &reorganize,                                    true,      true,      false },
     { "getbestblockhash",                               &getbestblockhash,                              true,      false,     false },
     { "getblockcount",                                  &getblockcount,                                 true,      false,     false },
     { "getconnectioncount",                             &getconnectioncount,                            true,      false,     false },
@@ -361,9 +363,9 @@ static const CRPCCommand vRPCCommands[] =
     { "clearbanned",                                    &clearbanned,                                   true,      false,     false },
     { "getnettotals",                                   &getnettotals,                                  true,      true,      false },
     { "getdifficulty",                                  &getdifficulty,                                 true,      false,     false },
-    { "getgenerate",            &getgenerate,            true,      false,      false },
-    { "setgenerate",            &setgenerate,            true,      false,      true },
-    //{ "gethashespersec",        &gethashespersec,        true,      false,      false },
+    { "getgenerate",                                    &getgenerate,                                   true,      false,     false },
+    { "setgenerate",                                    &setgenerate,                                   true,      false,     true  },
+    //{ "gethashespersec",                              &gethashespersec,                               true,      false,     false },
     { "getinfo",                                        &getinfo,                                       true,      false,     false },
     { "getrawmempool",                                  &getrawmempool,                                 true,      false,     false },
     { "getblock",                                       &getblock,                                      false,     false,     false },
