@@ -358,4 +358,7 @@ extern json_spirit::Value smsginbox(const json_spirit::Array& params, bool fHelp
 extern json_spirit::Value smsgoutbox(const json_spirit::Array& params, bool fHelp);
 extern json_spirit::Value smsgbuckets(const json_spirit::Array& params, bool fHelp);
 
+extern json_spirit::Value prune(const json_spirit::Array& params, bool fHelp);
+extern json_spirit::Value reorganize(const json_spirit::Array& params, bool fHelp);
+
 #endif
