@@ -23,6 +23,13 @@ v1.0.0.7 (Pre-release)
  * Installed: Block Shield 1.2.1 (Mainnet: Inactive, Testnet: Block # 338250)
  * FIX: Blank Masternode Payee in CBlock::AddToBlockIndex()
  * Install Internal PoW Miner (setgenerate)
+ * FIX: Sync time minimized & Reorganize/Prune orphan blocks
+ * FIX: RPC Client
+ * FIX: TXDB Crash
+ * FIX: Swapped BOOST::copy_file for STD copy_file
+ * FIX Init: LoadblockIndex
+ * Installed: Init PruneOrphanBlocks
+ * Installed: RPC Prune & Reorganize
 
 v1.0.0.6
 --------
